fixed html elements visibility, added filter (hardcoded), added svgs

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,11 @@ a {
     margin: 0.5rem;
 }
 
+.checkboxes {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+}
 
 /* From uiverse.io by @fanishah */
 .card {
